--- a/index.html
+++ b/index.html
@@ -16,19 +16,28 @@ layout: defaults
               <input type="text" name="" value="интересующий навык..." class="form-control">
             </div>
             <div class="col-md-8"><a class="btn btn-primary btn-lg" href="#" role="button">Найти</a></div>
-
           </div>
         </div>
+      </div>
+      <div class="row">
+        <h1>Рекомендованные публикации</h1>
+        <hr>
+
+      </div>
+      <div class="row">
+        {% for post in site.posts %}
+          {% include ibox.html href="post.url" title=post.title lead=post.lead tags=post.tags state=post.state type=post.type %}
+        {% endfor %}
       </div>
     </div>
 
 </div>
 <div class="footer">
     <div class="pull-right">
-        10GB of <strong>250GB</strong> Free.
+
     </div>
     <div>
-        <strong>Copyright</strong> Example Company &copy; 2014-2015
+        <strong>Copyright</strong> КИБЕРНЕТИКА &copy; 2018
     </div>
 </div>
 
